# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.889 2009/04/27 08:07:35 tr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta2 (2009/??/??)
 - (2009/04/27) Fixed bug# 3802 - Errormessage: "Got no EncodeObject!" if
    using rpc.pl (SOAP).
 - (2009/04/24) Fixed bug# 3691 - CustomerUser::LDAP does support GroupDN now.
 - (2009/04/23) Fixed bug# 3799 - The UPGRADING refrences a file not included
    in the source code.
 - (2009/04/20) Updated nb_NO translation - thanks to Fredrik Andersen!
 - (2009/04/20) Fixed bug# 3786 - No CSS get found at installation time (no
    colors are visable).

2.4.0 beta1 (2009/04/20)
 - (2009/04/20) Changed default config size of IPC-Log (LogSystemCacheSize)
    to 32k (64k is not working on darwin).
 - (2009/04/20) Moved from bin/SetPermissions.sh to bin/SetPermissions.pl
    for a better maintanance.
 - (2009/04/20) Added warning screen to AdminSysConfig, AdminPackageManager,
    AdminGenericAgent to block to use it till SecureMode is activated.
 - (2009/04/18) Added SysConfig setting to (not) include custmers email address
    on composing an answer "Ticket::Frontend::ComposeAddCustomerAddress".
    Default is set to true.
 - (2009/04/17) Added own SysConfig settings for bulk action (
    Ticket // Frontend::Agent::Ticket::ViewBulk).
 - (2009/04/15) Removed AgentCanBeCustomer option from agent frontend.
    Customer followup messages can only be created from the customer frontend.
 - (2009/04/09) Added search for article create times in ticket search.
 - (2009/04/09) Improved email send functionality to properly format emails
    with alternative parts and inline images.
 - (2009/04/09) Added enhancement bug# 3514 - RegExp support in ACLs. Now you